--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="/Users/tobias/Documents/Informatik/GdI 1/Aufgaben 2014/08_Pacman/lib/eea.jar"/>
+	<classpathentry kind="lib" path="/Users/tobias/Documents/Informatik/GdI 1/Aufgaben 2014/08_Pacman/lib/slick.jar"/>
+	<classpathentry kind="lib" path="/Users/tobias/Documents/Informatik/GdI 1/Aufgaben 2014/08_Pacman/lib/lwjgl-2.9.0/jar/lwjgl.jar"/>
+	<classpathentry kind="lib" path="/Users/tobias/Documents/Informatik/GdI 1/eclipse/plugins/org.apache.ant_1.8.4.v201303080030/lib/ant-junit.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
